syntax = 'proto3';

option java_package = "org.dubhe.serving.proto";

service InferenceService {
  rpc inference(DataRequest) returns (DataResponse) {}
}

message DataRequest{
  repeated Data data_list = 1;
}

message Data {
  string data_file = 1;
  string data_name = 2;
}

message DataResponse{
  string json_result = 1;
}
